--- a/css/style.css
+++ b/css/style.css
@@ -9158,12 +9158,30 @@ textarea.form-control {
 .about-author .desc h3 {
   font-size: 24px; }
 
+
 .ftco-section {
-  padding: 7em 0;
-  position: relative; }
-  @media (max-width: 767.98px) {
-    .ftco-section {
-      padding: 6em 0; } }
+  padding: 6em 0;
+  position: relative;
+}
+
+.ftco-intro {
+  padding: 6em 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: relative;
+  color: rgba(255, 255, 255, 0.8);
+  background: #e2c0bb;
+  border-radius: 0;
+}
+
+@media (max-width: 767.98px) {
+  .ftco-section, .ftco-intro {
+    padding: 6em 0;
+  }
+}
 
 .ftco-no-pt {
   padding-top: 0 !important; }
