--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/* Custom: Smaller padding for airports section */
+.airport-section-tight {
+  padding-top: 2em !important;
+  padding-bottom: 2em !important;
+}
 /*!
  * Bootstrap v4.2.1 (https://getbootstrap.com/)
  * Copyright 2011-2018 The Bootstrap Authors
